# xinji

./: .editorconfig  .gitattributes  CMakeLists.txt
docs/: README.md  TODO.md
lib/: xinji.lua
lib/xinji/internal/: environment.lua  polyfills.lua
samples/: libxinji.xinji  tuple.xinji
src/: CMakeLists.txt  primitives.inc  xinji.c  xinji_lib.c  xinji_lib.h  xinji_type.c  xinji_type.h
src/include/: xinji.h
test/: CMakeLists.txt  evaluate.lua  json_schema.lua
test/evaluate/: CMakeLists.txt  main.c
